tests/cases/meta/errors/meta-function-pattern-expression-site.ari
meta fn wildcard(input: ast) -> ast {
  return pattern!(_);
}

fn main() -> i64 {
  return wildcard!(1);
}
